tests/neg-custom-args/fatal-warnings/main-functions-nameclash.scala

object foo {
  @main def foo(x: Int) = () // error: class foo differs only in case from object foo
}
